--- a/css/style.css
+++ b/css/style.css
@@ -163,3 +163,149 @@ td .fa-trash-can{
 td .fa-arrow-rotate-left{
     background: #c36e0e;
 }
+
+.content-info .content-scan{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.content-scan .content-qr-scan{
+    width: 40%;
+    box-shadow: 0px 0px 15px rgba(0,0,0,.5);
+    border-radius: 10px;
+}
+.content-scan .content-qr-scan h3{
+    width: 100%;
+    text-align: center;
+    height: 50px;
+    line-height: 50px;
+    background: #444070;
+    border-radius: 10px 10px 0 0;
+    color: #fff;
+}
+.content-scan .content-qr-scan .content-img-scan{
+    width: 100%;
+    height: 350px;
+    overflow: hidden;
+}
+.content-scan .content-qr-scan .content-img-scan img{
+    height: 100%;
+    margin: auto;
+    display: block;
+    overflow: cover;
+}
+.content-scan .content-qr-scan .content-img-scan canvas{
+    width: 80%;
+    margin: auto;
+    margin-top: 15px;
+    display: block;
+    overflow: cover;
+}
+.content-scan .content-info-scan{
+    background: #efefef;
+    width: 58%;
+    border-radius: 10px;
+    box-shadow: 0px 0px 15px rgba(0,0,0,.5);
+}
+.content-info-scan h3{
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    background: #444070;
+    color: #fff;
+    border-radius: 10px 10px 0 0;
+}
+.content-info-scan .info-scan{
+    display: flex;
+    padding: 0 20px;
+    margin-top: 20px;
+}
+.content-info-scan .info-scan .content-student{
+    width: calc(100% - 220px);
+}
+.content-scan .content-info-scan .info-scan .photo-student{
+    width: 200px;
+    height: 200px;
+    background: #fff;
+    overflow: hidden;
+    margin-right: 20px;
+    border-radius: 10px;
+    border: 5px solid #5a8ac0;
+}
+.content-scan .content-info-scan .info-scan img{
+    overflow: cover;
+    width: 98%;
+    margin: auto;
+    display: block;
+}
+.content-scan .content-info-scan .info-scan .content-student .info-flex{
+    display: flex;
+    justify-content: space-between;
+}
+.content-scan .content-info-scan .info-scan .content-student p{
+    font-size: 15px;
+    padding: 5px 25px;
+    margin-bottom: 20px;
+    display: flex;
+    background: #fff;
+    border-radius: 5px;
+}
+.content-scan .content-info-scan .info-scan .content-student p span{
+    width: 130px;
+    font-weight: bold;
+    color: #5a8ac0;
+}
+.content-scan .content-info-scan .info-scan .content-student p .info-stu{
+    width: auto;
+    font-weight: normal;
+    color: #000;
+}
+.content-scan .content-info-scan .state-atten{
+    padding: 0 20px;
+}
+.content-scan .content-info-scan .state-atten p{
+    padding: 5px 25px;
+    margin-bottom: 20px;
+    font-weight: 400;
+    font-size: 16px;
+    border-radius: 5px;
+}
+.content-scan .content-info-scan .state-atten p i{
+    margin-right: 10px;
+}
+.content-scan .content-info-scan .state-atten .state-check{
+    color: #047b0e;
+    background: #a0eca7;
+}
+.content-scan .content-info-scan .state-atten .state-warning{
+    color: #735600;
+    background: #ddc681;
+    display: none;
+}
+.content-scan .content-info-scan .action-state{
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+}
+.content-scan .content-info-scan .action-state button{
+    padding: 10px 25px;
+    margin: 10px 25px;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    transition: all .3s ease;
+
+}
+.content-scan .content-info-scan .action-state .btn-check{
+    background: #0b9e18;
+    color: #fff;
+}
+.content-scan .content-info-scan .action-state .btn-justify{
+    background: #ae8406;
+    color: #fff;
+}
+.content-scan .content-info-scan .action-state button:hover{
+    transform: scale(110%);
+}
