--- a/css/modal.css
+++ b/css/modal.css
@@ -28,19 +28,21 @@
     transform: translateY(-30%);
     border-radius: 10px;
     height: auto;
-}
-.content-modal .cont-modal{
     overflow: auto;
-    height: calc(100% - 60px);
+}
+.content-modal::-webkit-scrollbar{
+    display: none;
 }
 .content-modal .modal-title{
-    position: relative;
-    background: rgba(2, 18, 49, .9);
+    position: sticky;
+    background: rgba(2, 18, 49);
     width: 100%;
     height: 60px;
     border-radius: 10px 10px 0 0;
     display: flex;
     justify-content: space-between;
+    top: 0;
+    z-index: 100;
 }
 .content-modal h5{
     height: 60px;
@@ -76,17 +78,17 @@
     padding: 0 30px;
     overflow: auto;
 }
-.content-por-aula,.content-por-fecha{
+.content-form-reporte{
     width: 100%;
     border-top: 1px solid #a6a6a6;
     display: none;
 }
-.content-por-aula .content-btn-action , .content-por-fecha .content-btn-action {
+.content-form-reporte .content-btn-action {
     width: 100%;
     display: flex;
     justify-content: center;
 }
-.content-por-aula .content-btn-action a, .content-por-fecha .content-btn-action a{
+.content-form-reporte .content-btn-action a{
     text-decoration: none;
     padding: 10px 20px;
     background: rgba(2, 18, 49, .9);
@@ -95,10 +97,10 @@
     transition: all .4s ease;
     cursor: pointer;
 }
-.content-por-aula .content-btn-action a:hover, .content-por-fecha .content-btn-action a:hover{
+.content-form-reporte .content-btn-action a:hover{
     background: rgba(20, 62, 148, 0.9);
 }
-.content-modal .cont-modal .formulario .content-input-modal .content-por-aula h6, .content-modal .cont-modal .formulario .content-input-modal .content-por-fecha h6{
+.content-modal .cont-modal .formulario .content-input-modal .content-form-reporte h6{
     font-size: 20px;
     font-weight: 600;
     color: #535353;
@@ -109,4 +111,9 @@
 }
 .modal-show .content-modal{
     transform: translateY(0%);
+}
+@media only screen and (max-height: 800px) {
+    .content-modal {
+        max-height: 90vh;
+    }
 }
