--- a/css/table.css
+++ b/css/table.css
@@ -1,18 +1,34 @@
 table {
-    width: 100%;
     border-collapse: collapse;
+    width: 100%;
+}
+.content-info-table{
+    height: 305px;
+    width: 100%;
+    overflow-y: auto;
+    position: relative;
+}
+.content-info-table::-webkit-scrollbar{
+    display: none;
+}
+table thead {
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 table td, table th{
     padding: 12px 15px;
     border: 1px solid #ddd;
     text-align: center;
-    font-size: 13px;
-    
+    font-size: 11px;
 }
-
+table tbody{
+    top: 20px;
+}
 table th{
-    background: rgba(21,51,111,.7);
+    background: #5d6f92;
     color: #fff;
+    font-size: 13px;
 }
 table tr:hover{
     background: #f5f5f5;
